# defsim

./: .gitignore  README.md  exercise.py  requirements.txt
defsim/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
defsim/scripts/: exercise_ans.py  run_claw.py  single_obj.py  test_render.py
defsim/src/ds/: render.py
defsim/src/ds/infra/: common.py  config.py  render.py
defsim/src/infra/: __init__.py  render.py
defsim/src/objects/: __init__.py  circle.py  claw.py  deformable_object.py  line.py  square.py
defsim/src/simulation/: __init__.py  claw_simulation.py  simulation.py
scripts/: main.py  oneCircle.py  oneSphere.py  run_claw.py  single_obj.py  tetris_jump.py  tetris_squeeze.py  twoCircles.py  twoSpheres.py  wind.py
src/: simulation.py
src/clothes/: Cloth.py  ClothOld.py  GridCloth.py  cloth.py  grid_cloth.py
src/defobjects/: DefObject.py
src/objects/: Box.py  Circle.py  Claw.py  Line.py  Object.py  Plane.py  Square.py  box.py  circle.py  object.py  plane.py
src/simulation/: ClawSimulation.py  Simulation.py  simulation.py
