[metadata]
name = ds
author = Hojin Jung, Donguk Lee, Kyungjun Oh, Minyeong Choi, Yoonyoung Cho
author_email = hojin.jung@kaist.ac.kr
description = Deformable Simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yycho0108/defsim
keywords = robotics
license = MIT
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools >= 48
    setuptools_scm >= 6.0
install_requires =
    numpy
    matplotlib
# FIXME(ycho): temporarily disabled due to symlink issues
include_package_data = False

[options.packages.find]
where = src
